--- a/Microsoft.PowerApps.TestAutomation.Browser/packages.config
+++ b/Microsoft.PowerApps.TestAutomation.Browser/packages.config
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--Copyright (c) Microsoft Corporation. All rights reserved.
     Licensed under the MIT license.-->
 <packages>
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
-  <package id="Selenium.Support" version="4.13.1" targetFramework="net462" />
-  <package id="Selenium.WebDriver" version="4.13.1" targetFramework="net462" />
-  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net462" />
+  <package id="Selenium.Support" version="4.11.0" targetFramework="net462" />
+  <package id="Selenium.WebDriver" version="4.11.0" targetFramework="net462" />
+  <package id="System.Drawing.Common" version="8.0.0-rc.2.23479.14" targetFramework="net462" />
 </packages>
